Bug 1750042 - local files that trip the 'what do you want to do with this file' dialog should open from their initial location, r=mhowell,mtigley a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D136401